--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@
 /* Variables */
 
 :root {
-  --color-win: #78CF82;
-  --color-lose: #D94545;
+  --color-win: rgba(1, 77, 30, 0.618);
+  --color-lose: rgba(100, 0, 0, 0.618);
   --color-start: #5b85b7;
   --color-neutral: #445069;
   --color-neutral-light: #D2D2D2;
@@ -21,6 +21,10 @@
 * {
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+}
+
+.main-container {
+  background-color: black;
 }
 
 body {
@@ -50,9 +54,9 @@ button {
   margin: 6px;
   border: 1px solid transparent;
   padding: .5rem 1rem;
-  color: var(--color-keys);
+  color: beige;
   font-size: var(--font-size-medium);
-  background-color: var(--color-keys-light);
+  background-color: var(--color-neutral);
   border-radius: 5px;
   -webkit-transition: var(--transition);
   -o-transition: var(--transition);
@@ -99,7 +103,7 @@ button {
   padding: 20px 1px 0 1px;
   margin-right: 2px;
   color: transparent;
-  background: var(--color-neutral-light);
+  background: var(--color-neutral);
   border-radius: 5px;
 }
 
@@ -131,15 +135,15 @@ button {
 }
 
 .chosen {
-  background: #3a3f58;
+  background: black;
   border-radius: 5px;
   font-size: var(--font-size-medium);
-  color: #FFFFFF;
+  color: #4ac0d5;
 }
 
 .wrong {
-  background: #f7a964;
-  color: #FFFFFF;
+  background: rgba(255, 0, 0, 0.411);
+  color: rgb(150, 150, 150);
 }
 
 .btn__reset {
@@ -196,7 +200,7 @@ button {
 }
 
 .lose {
-  background-color: #f5785f;
+  background-color: var(--color-lose);
 }
 
 .lose a {
